--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "aesthetic",
     "cute",
     "pretty",
-    "colorful",
+    "colorful"
   ],
   "icon": "./images/kitty.jpg",
   "contributes": {
