--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "kittypower",
-  "displayName": "KittyPower",
-  "description": "This theme gives you the power of Kitties to accomplish all the work you have to do :)",
+  "displayName": "Kitty Power",
+  "description": "This theme gives you the power of kitties to accomplish all the work you have to do :)",
   "publisher": "Eduardo-Escoto",
   "repository": {
     "type": "git",
     "url": "https://github.com/eduardo-escoto/KittyPower.git"},
-  "version": "0.0.4",
+  "version": "0.0.5",
   "engines": {
     "vscode": "^1.85.0"
   },
